# mango-desk

./: .eslintignore  .eslintrc.cjs  .gitignore  LICENSE  README.md  README_CN.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/assets/test_file/: example.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en-US.yml  zh-CN.yml
src-tauri/src/: db_initializer.rs  document_loaders.rs  embedding_service.rs  embedding_service_manager.rs  entities.rs  enums.rs  errors.rs  fs_watcher.rs  global.rs  indexer_service.rs  indexers.rs  initializer.rs  lib.rs  lib_commands.rs  main.rs  model_platform_services.rs  repositories.rs  scanner.rs  searcher.rs  structs.rs  timers.rs  traits.rs  types.rs  utils.rs
src-tauri/src/document_loaders/: docx.rs  excel.rs  odp.rs  odt.rs  open_doc.rs  pdf.rs  plain_text.rs  pptx.rs
src-tauri/src/fs_watcher/: fs_event_normalizer.rs  watcher.rs
src-tauri/src/indexers/: audio_indexer.rs  document_indexer.rs  image_indexer.rs
src-tauri/src/model_platform_services/: dashscope.rs  deepseek.rs  openai.rs  openai_compatible_service.rs  siliconflow.rs
src-tauri/src/repositories/: ai_model_repo.rs  config_repo.rs  file_content_embedding_repo.rs  file_info_repo.rs  file_metadata_embedding_repo.rs  indexing_task_repo.rs  model_platform_repo.rs
src-tauri/src/searcher/: path_search_engine.rs  semantic_search_engine.rs
src-tauri/src/structs/: command_result.rs  embedding_progress.rs  file_metadata.rs  fs_watcher_setting.rs  indexer_setting.rs  indexing_summary.rs  proxy_setting.rs  search_result.rs  usn_state.rs
src-tauri/src/traits/: audio_analyzer.rs  chat_capable.rs  document_loader.rs  image_analyzer.rs  indexing_template.rs  with_platform_config.rs
src-tauri/src/utils/: aes_util.rs  app_util.rs  audio_util.rs  base64_util.rs  datetime_util.rs  download_util.rs  file_util.rs  (+7 more)
(+27 files in other folders)
