[package]
name = "mango-desk"
version = "0.3.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mango_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
log = "0.4"
reqwest = { version = "0.12.23", features = ["json"] }
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
async-openai = { version = "0.29.2", features = ["byot"] }
aes = "0.8"
cbc = "0.1"
block-padding = "0.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sqlite-vec = "0.1.6"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
ort = "=2.0.0-rc.10"
ndarray = "0.16.1"
tokenizers = { version = "0.22.1", default-features = false, features = [
  "onig",
] }
text-splitter = { version = "0.28.0", features = ["tokenizers"] }
# excel parser
calamine = { version = "0.31.0", features = ["chrono"] }
# doc、ppt parser
zip = "6.0.0"
quick-xml = "0.38.3"
thiserror = "2.0.17"
anyhow = "1.0.100"
base64 = "0.22.1"
rust-i18n = "3.1.5"
infer = "0.19.0"
async-trait = "0.1.89"
csv = "1.3.1"
derive_builder = "0.20.2"
lopdf = "0.38.0"
md-5 = "0.10.6"
chrono = "0.4.42"
notify = "8.2.0"
aho-corasick = "1.1"
rayon = "1.7"
smallvec = "1.11"
uuid = { version = "1.19.0", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
